--- a/src/vista/VentanaPrincipal.form
+++ b/src/vista/VentanaPrincipal.form
@@ -81,6 +81,7 @@
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
     <Property name="title" type="java.lang.String" value="jAFD - Simulador de Aut&#xf3;mata Finito Determinista"/>
+    <Property name="resizable" type="boolean" value="false"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="menuBar" type="java.lang.String" value="jMenuBar1"/>
