--- a/src/vista/VentanaPrincipal.form
+++ b/src/vista/VentanaPrincipal.form
@@ -309,6 +309,9 @@
       </Layout>
       <SubComponents>
         <Component class="javax.swing.JTextField" name="textPalabra">
+          <Events>
+            <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="textPalabraKeyPressed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="botonEvaluar">
           <Properties>
