--- a/src/vista/dialogs/EstadosFinalesDialog.form
+++ b/src/vista/dialogs/EstadosFinalesDialog.form
@@ -4,6 +4,7 @@
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
     <Property name="title" type="java.lang.String" value="Nuevos Estados Finales"/>
+    <Property name="resizable" type="boolean" value="false"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -58,6 +59,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="textEstadosFinales">
+      <Events>
+        <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="textEstadosFinalesKeyPressed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="botonAceptar">
       <Properties>
