--- a/src/vista/dialogs/NuevaTransicionDialog.form
+++ b/src/vista/dialogs/NuevaTransicionDialog.form
@@ -83,6 +83,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="textTransicion">
+      <Events>
+        <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="textTransicionKeyPressed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel2">
       <Properties>
