--- a/src/jafd/gui/dialogs/ViewTransitionsDialog.form
+++ b/src/jafd/gui/dialogs/ViewTransitionsDialog.form
@@ -55,7 +55,7 @@
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
       <SubComponents>
-        <Component class="javax.swing.JTable" name="tablaDeTransiciones">
+        <Component class="javax.swing.JTable" name="tableTransitions">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="3" rowCount="0">
