--- a/src/jafd/gui/dialogs/FinalStatesDialog.form
+++ b/src/jafd/gui/dialogs/FinalStatesDialog.form
@@ -28,11 +28,11 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="textEstadosFinales" max="32767" attributes="1"/>
+                  <Component id="textFinalStates" max="32767" attributes="1"/>
                   <Component id="jLabel1" alignment="0" pref="403" max="32767" attributes="1"/>
                   <Group type="102" alignment="1" attributes="0">
                       <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-                      <Component id="botonAceptar" min="-2" pref="95" max="-2" attributes="0"/>
+                      <Component id="btnAccept" min="-2" pref="95" max="-2" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
@@ -45,9 +45,9 @@
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
-              <Component id="textEstadosFinales" min="-2" max="-2" attributes="0"/>
+              <Component id="textFinalStates" min="-2" max="-2" attributes="0"/>
               <EmptySpace pref="14" max="32767" attributes="0"/>
-              <Component id="botonAceptar" min="-2" max="-2" attributes="0"/>
+              <Component id="btnAccept" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
@@ -59,17 +59,17 @@
         <Property name="text" type="java.lang.String" value="Ingrese los estados finales (F) separados por comas(,):"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="textEstadosFinales">
+    <Component class="javax.swing.JTextField" name="textFinalStates">
       <Events>
-        <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="textEstadosFinalesKeyPressed"/>
+        <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="textFinalStatesKeyPressed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="botonAceptar">
+    <Component class="javax.swing.JButton" name="btnAccept">
       <Properties>
         <Property name="text" type="java.lang.String" value="Aceptar"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botonAceptarActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnAcceptActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
